// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`change-appeal-details/local-planning-authority GET change-appeal-details/local-planning-authority should render the local planning authority page pre-selected 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-fieldset__legend--l" for="lpas"> Local planning authority</label></h1>
                            <select class="govuk-select accessible-autocomplete" id="lpas" name="localPlanningAuthority"
                            data-cy="search-lpas">
                                <option value="3">Barnsley Metropolitan Borough Council</option>
                                <option value="2" selected>Maidstone Borough Council</option>
                            </select>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`change-appeal-details/local-planning-authority GET change-appeal-details/local-planning-authority/check-details should render the check details page with email previews 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Check details and update local planning authority</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <dl class="govuk-summary-list">
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Local planning authority</dt>
                                <dd                                 class="govuk-summary-list__value">Maidstone Borough Council</dd>
                            </div>
                        </dl>
                        <div class="govuk-grid-row">
                            <div class="govuk-grid-column-full">
                                <details class="govuk-details">
                                    <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Preview email to appellant</span>
                                    </summary>
                                    <div class="govuk-details__text">appellant preview</div>
                                </details>
                            </div>
                        </div>
                        <div class="govuk-grid-row">
                            <div class="govuk-grid-column-full">
                                <details class="govuk-details">
                                    <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Preview email to lpa</span>
                                    </summary>
                                    <div class="govuk-details__text">lpa preview</div>
                                </details>
                            </div>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Update local planning authority</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`change-appeal-details/local-planning-authority POST change-appeal-details/local-planning-authority should re-render the page with an error message if required field is missing 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#local-planning-authority">Enter the local planning authority.</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-fieldset__legend--l" for="lpas"> Local planning authority</label></h1>
                            <p id="lpas-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Enter the local planning
                                authority.</p>
                            <select class="govuk-select accessible-autocomplete govuk-select--error"
                            id="lpas" name="localPlanningAuthority" aria-describedby="lpas-error" data-cy="search-lpas">
                                <option value="3">Barnsley Metropolitan Borough Council</option>
                                <option value="2" selected>Maidstone Borough Council</option>
                            </select>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;
